--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "ipfs-http-client": "^58.0.0",
     "nft.storage": "^7.0.0",
+    "pkg": "file:../pkg",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
