--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@mui/material": "^5.14.9",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "ipfs-http-client": "^58.0.0",
+    "joi": "^17.13.3",
+    "my-react-ui-ioss-test": "^1.0.0",
     "nft.storage": "^7.0.0",
-    "pkg": "file:../pkg",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^2.5.3",
     "web-vitals": "^2.1.4",
     "web3.storage": "^4.4.0"
   },
@@ -38,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.22.15",
+    "babel-cli": "^6.26.0"
   }
 }
